# patrolbot

./: .dockerignore  .gitignore  AGENTS.md  README.md  mkdocs.yml  requirements.txt
.github/workflows/: deploy.yml
docker/: .env.example  Dockerfile  README.md  docker-compose.yml  healthcheck.py  patrolbot-status  status.sh
docs/: faq.md  glossary.md  index.md  known-gaps.md
docs/architecture/: communication-architecture.md  data-flow.md  execution-flow.md  hardware-architecture.md  overview.md  software-architecture.md
docs/contributing/: contributing.md  pull-request-process.md  release-process.md
docs/deployment/: docker.md  network-setup.md  remote-operation.md  robot-deployment.md  updates.md
docs/development/: coding-standards.md  debugging.md  profiling.md  testing.md  workspace-setup.md
docs/devices/: actuators.md  controllers.md  device-overview.md  interfaces.md  sensors.md
docs/getting-started/: building.md  installation.md  quickstart.md
docs/ros2/: actions.md  (+5 more)
logs/: patrolbot-logs.sh
ros2_ws/src/patrolbot_navigation/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
ros2_ws/src/patrolbot_navigation/config/: nav2_params.yaml
ros2_ws/src/patrolbot_navigation/config/behavior_trees/: navigate_recovery_always_try.xml  navigate_through_poses_recovery_always_try.xml
ros2_ws/src/patrolbot_navigation/launch/: bringup.launch.py  patrolbot_localization_launch.py  patrolbot_navigation_launch.py
ros2_ws/src/patrolbot_navigation/maps/: cmuq_1st_floor.yaml  second_map.yaml
ros2_ws/src/patrolbot_navigation/rviz/: patrolbot_nav.rviz
ros2_ws/src/patrolbot_navigation/scripts/: lms200_sanitizer.py  patrolbot_joy_teleop.py  patrolbot_safety_watchdog.py  twist_mux.yaml
(+34 files in other folders)
